# overmax

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  ENGINEERING_TASTE.md  LOCAL_UPDATE_TEST.md  README.md  TASKS.md  analyze.py  build.bat  constants.py  debug_window.py  global_hotkey.py  handoff_context.md  hook-easyocr.py  image_db.py  image_db_cli.py  main.py  mode_diff_detector.py  overlay.py  overlay_controller.py  overlay_window.py  overmax.spec  recommend.py  recommend_overlay.py  record_db.py  requirements-dev.txt  requirements.txt  runtime_patch.py  screen_capture.py  settings.json  settings.py  varchive.py  version_info.txt  window_tracker.py
.github/scripts/: linux-vertical-slice-lifecycle.sh
.github/workflows/: ci.yml
capture/: __init__.py  helpers.py  hysteresis.py  ocr_wrapper.py  roi_manager.py  screen_capture.py  window_tracker.py
core/: __init__.py  app.py  game_state.py  utils.py  version.py
data/: app_updater.py  image_db_updater.py  recommend.py  record_db.py  record_manager.py  sheet_meta.py  steam_session.py  sync_manager.py  varchive.py  varchive_client.py
detection/: __init__.py  image_db.py  image_db_cli.py  mode_diff.py  ocr.py  ocr_wrapper.py  play_state.py
docs/: 2026-05-24-cpu-optimization-message-pump.md  2026-06-01-discord-ipc-mitm-security-review.md  2026-06-05-overlay-fullscreen-technical-analysis.md  2026-06-15-image_db_redesign_plan.md  2026-06-23-detection-pipeline-architecture-and-recognition-logic.md  2026-07-01-ocr-elimination-and-template-matching-plan.md  2026-07-10-recommend-provider-protocol.md  TASKS_v0.2.0_archive.md  opencv-to-rust-plan.md  qt-runtime-plan.md  qt-ui-alternatives.md  rust-native-port-plan.md
docs/decisions/: opencv-removal.md  qt-cleanup.md  win32-transition.md
docs/releasenotes/: RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md
infra/: __init__.py
infra/gui/: __init__.py  back_buffer.py  controls.py  dpi.py  input.py  layout.py  placement.py  signals.py  status_window.py  text_renderer.py  theme.py  tray.py  windowing.py
overlay/: __init__.py  controller.py  debug_window.py  settings_varchive.py  settings_window.py  signals.py  sync_actions.py  sync_candidate_row.py  sync_window.py  tray_icon.py  ui_payload.py  utils.py  window.py
overlay/ui/: __init__.py  footer_widget.py  header_widget.py  navigation.py  pattern_view.py  recommend_view.py
overlay/win32/: __init__.py  back_buffer.py  debug_window.py  geometry.py  render.py  settings_common.py  settings_window.py  style.py  sync_bridge.py  sync_row.py  sync_window.py  text_renderer.py  view_state.py  window.py
rust/overmax_app/: Cargo.toml
rust/overmax_app/src/: bin_utils.rs  cache_update.rs  capture_engine.rs  debug_ui.rs  detection_pipeline.rs  detection_worker.rs  digit_templates.rs  dxgi_capture.rs  font_test.rs  frame_utils.rs  global_hotkey.rs  hysteresis.rs  lib.rs  logo_templates.rs  main.rs  native_app.rs  native_app_log.rs  native_app_recommend.rs  native_app_viewports.rs  ocr_engine.rs  overlay_recommend_ui.rs  overlay_theme.rs  overlay_ui.rs  play_state.rs  roi.rs  roi_overlay_ui.rs  screen_capture.rs  settings_ui.rs  single_instance.rs  steam_session.rs  sync_ui.rs  tray_icon.rs  varchive_upload.rs  window_tracker.rs
rust/overmax_app/src/system/: cache_update.rs  single_instance.rs  steam_session.rs
rust/overmax_app/src/system/single_instance/: linux.rs  windows.rs
rust/overmax_app/src/system/steam_session/: linux.rs  windows.rs
rust/overmax_app/src/system/updater/: linux.rs  mod.rs  windows.rs
rust/overmax_app/src/ui/: debug_ui.rs  linux_layer_overlay.rs  mod.rs  native_app.rs  native_app_commands.rs  native_app_recommend.rs  native_app_viewports.rs  overlay_ui.rs  settings_ui.rs  sync_ui.rs  tray_icon.rs  ui_command.rs
rust/overmax_app/src/ui/components/: fade_clipped_label.rs  lite_panel.rs  mod.rs  mode_badge.rs  overlay_header.rs  overlay_header_detail.rs  play_meta_row.rs  status_lamp.rs
rust/overmax_app/src/ui/platform/: fallback.rs  linux.rs  mod.rs  windows.rs
rust/overmax_app/src/updater/: mod.rs  release.rs  result_io.rs  version.rs  worker.rs
rust/overmax_core/: Cargo.toml
rust/overmax_core/src/: changed.rs  game_state.rs  (+1 more)
rust/overmax_cv/: Cargo.toml  README.md  pyproject.toml
rust/overmax_cv/python/overmax_cv/: __init__.py
rust/overmax_cv/src/: hog.rs  image.rs  lib.rs  ocr.rs
rust/overmax_data/: Cargo.toml
rust/overmax_data/src/: compatibility.rs  image_index.rs  lib.rs  recommend.rs  record_db.rs  record_manager.rs  scene_config.rs  settings.rs  sheet_meta.rs  sync.rs  varchive.rs
rust/overmax_data/src/community/: client.rs  sync.rs
rust/overmax_data/src/config/: scene_config.rs
rust/overmax_data/src/service/: jacket_matcher.rs  recommend.rs  record_manager.rs
rust/overmax_data/src/store/: image_index.rs  record_db.rs
rust/overmax_engine/: Cargo.toml
rust/overmax_engine/src/: lib.rs
rust/overmax_engine/src/capture/: capture_engine.rs  dxgi_capture.rs  frame.rs  frame_utils.rs  mod.rs  screen_capture.rs  window_tracker.rs  x11_capture.rs
rust/overmax_engine/src/capture/capture_engine/: linux.rs  windows.rs
rust/overmax_engine/src/capture/capture_engine/windows/: dxgi.rs  gdi.rs  mod.rs
rust/overmax_engine/src/capture/window_tracker/: linux.rs  windows.rs
rust/overmax_engine/src/detector/: detection_pipeline.rs  detection_worker.rs  ocr_engine.rs  play_state.rs  roi.rs
rust/overmax_engine/src/detector/ocr_engine/: linux.rs  stub.rs  windows.rs
rust/overmax_engine/src/detector/templates/: result_diff.rs  result_mode.rs
scripts/: package-rust.ps1
test/: game_state_fixture_check.py  hog_compat_check.py  overlay_tester.py  prepare_update_test_feed.py  pyside6_overlay_smoke.py  rust_hog_check.py  start_update_test_server.bat  ui_payload_check.py  verify_excel_matching.py  win32_debug_window_smoke.py  win32_overlay_geometry.py  win32_overlay_payload_sample.py  win32_overlay_pixel_check.py  win32_overlay_render.py  win32_overlay_smoke.py  win32_settings_window_smoke.py  win32_status_window_smoke.py  win32_sync_window_smoke.py
test/fixtures/: game_state_cases.json
(+1 files in other folders)
