[workspace]
members = [
    "rust/overmax_app",
    "rust/overmax_core",
    "rust/overmax_cv",
    "rust/overmax_data",
]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
