[workspace]
members = [
    "rust/overmax_app",
    "rust/overmax_core",
    "rust/overmax_cv",
    "rust/overmax_data",
    "rust/overmax_engine",
]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
# 인지 복잡도(Cognitive Complexity) 한계를 55로 강제 제한 (초과 시 컴파일 실패)
cognitive_complexity = { level = "deny", priority = 1 }
type_complexity = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
