[package]
name = "overmax-app"
version = "0.2.2"
edition.workspace = true
license.workspace = true

[lib]
name = "overmax_app"
path = "src/lib.rs"

[[bin]]
name = "overmax-rs"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts",
    "glow",
] }
overmax-core = { path = "../overmax_core" }
overmax-data = { path = "../overmax_data" }
overmax_cv = { path = "../overmax_cv" }
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
    "json",
    "native-tls",
] }
serde_json = "1"
sha2 = "0.10.8"
winreg = "0.55"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
rfd = "0.15"
windows = { version = "0.62.2", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_System_WinRT",
    "Graphics_Capture",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
] }
windows-future = "0.3.2"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
self_update = { version = "0.44.0", features = ["archive-zip", "compression-zip-deflate"] }

[build-dependencies]
winres = "0.1.12"
