[package]
name = "overmax_cv"
version = "0.1.0"
edition = "2021"

[lib]
name = "overmax_cv"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
