[package]
name = "overmax-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "overmax_data"
path = "src/lib.rs"

[dependencies]
overmax-core = { path = "../overmax_core" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
strsim = "0.11.1"
