[package]
name = "overmax-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "overmax_data"
path = "src/lib.rs"

[dependencies]
overmax-core = { path = "../overmax_core" }
overmax_cv = { path = "../overmax_cv" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1"
strsim = "0.11.1"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

