[package]
name = "overmax-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "overmax_engine"
path = "src/lib.rs"

[dependencies]
overmax-core = { path = "../overmax_core" }
overmax-data = { path = "../overmax_data" }
overmax_cv = { path = "../overmax_cv" }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_System_WinRT",
    "Graphics_Capture",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
] }
windows-future = "0.3.2"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
